setup for table of contents

--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -1,1 +1,38 @@
+%
+\documentclass[12pt]{report}
+\usepackage[utf8]{inputenc}
+\usepackage{amsmath,xcolor}
+\usepackage{cancel}
+\usepackage{siunitx}
+\usepackage{graphicx}
+\usepackage{smartdiagram}
+\usepackage{tikz}
+\usepackage{bm}
+\usepackage{hyperref}
 
+\usetikzlibrary{shapes,arrows,decorations.pathmorphing}
+%\title{Ultrafast manipulation of SDW in Cr}
+%model: Louis Ponet, Sergey Artyukhin
+%\date{November 2018}
+\title{
+	{Interplay between complex orders in functional materials}\\
+	{\large Department of Nanosciences, Scuola Normale Superiore di Pisa}\\
+	{\large Quantum Materials Theory, Istituto Italiano di Tecnologia}}
+
+\author{Louis Ponet}
+\date{today}
+
+\begin{document}
+
+\chapter*{Abstract}
+\chapter*{Acknowledgements}
+\tableofcontents
+
+\chapter{Introduction}
+\input{chapters/introduction}
+\chapter{Charge order and spin-momentum locking in high spin-orbit coupled ferroelectrics}
+\input{chapters/spinorbit_rashba.tex}
+\chapter{Strong coupling and ultrafast control of charge and spin density waves in elemental Chromium}
+\input{chapters/chromium_sdw_cdw.tex}
+\chapter{
+\end{document}
