wrote a little on wannier functions

--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -60,9 +60,10 @@
 \tableofcontents
 
 \Include{Introduction}
-% \subfile{chapters/introduction}
+\Include{Theory}
 % \chapter{Charge order and spin-momentum locking in high spin-orbit coupled ferroelectrics}
 \Include{Rashba}
+
 % \chapter{Strong coupling and ultrafast control of charge and spin density waves in elemental Chromium}
 % \subfile{chapters/chromium_sdw_cdw.tex}
 \end{document}
