--- a/papers/Rashba/Rashba.tex
+++ b/papers/Rashba/Rashba.tex
@@ -27,6 +27,9 @@ The next step is to apply the Hamiltonian to Bloch spinor wavefunctions $\psi_n(
 	V_2 =& \frac{e \hbar^2}{4m^2c^2} \bm{\sigma} \cdot ( \bm{\nabla}V \times \bm{k}) \\
 	V_3 =& \frac{e \hbar}{4m^2c^2} \bm{\sigma} \cdot ( \bm{\nabla}V \times \bm{p})
 \end{align}
+\begin{equation}
+	E_n u_n(\bm{k}, \bm{r}) = \left(\frac{p^2}{2m} - eV + \hbar\frac{\bm{k}\cdot\bm{p}}{m} + \frac{\hbar^2 k^2}{2m} - \frac{e \hbar}{4m^2c^2} \bm{\sigma} \cdot ( \bm{\nabla}V \times [\hbar \bm{k} + \bm{p}])\right) u_n(\bm{k}, \bm{r}).
+\end{equation}
 
 In the following we assume that this equation can be solved for a time reversal symmetric point $\bm{k}_0$ in the first BZ, where the spin-up and spin-down part of the spinor are necessarily degenerate, and proceed following standard $\bm{k}\cdot\bm{p}$ theory to perform an expansion around this k-point. Since including the relativistic terms and nonzero $\bm{k}$ will lead to spin up-down symmetry breaking, we will denote the down spin state as $\Ket{u_n^\downarrow}$ and up spin state as $\Ket{u_n^\uparrow}$. We only investigate terms in the expansion that are linear in $\bm{k}$, since that's the part of the energy dispersion that we are seeking to explain. We again keep terms up to second order in $(1/c)^{-1}$.
 Without loss of generality we can take $\bm{k}_0 = 0$ and $E_0 = 0$.
