added some more Rashba

--- a/papers/Rashba/Rashba.tex
+++ b/papers/Rashba/Rashba.tex
@@ -34,13 +34,18 @@ In the following we assume that this equation can be solved for a time reversal 
 Without loss of generality we can take $\bm{k}_0 = 0$ and $E_0 = 0$.
 
 \begin{align}
+	\label{eq:kp_expansion}
 	E_n^{\sigma_1}(\bm{k}) =& - \Bra{u_n^{\sigma_1}} V_2 \Ket{u_n^{\sigma_1}} + \\
 		& \sum_{m,\sigma_2=\uparrow,\downarrow}\frac{\Bra{u_n^{\sigma_1}} V_1 \Ket{u_m^{\sigma_2}}\Bra{u_m^{\sigma_2}} V_3 \Ket{u_n^{\sigma_1}} + h.c.}{E_m^{\sigma_2} - E_n^{\sigma_1}},
 \end{align}
 
 where the sum over $m, \sigma_2$ includes all states which are not equal to $n, \sigma_1$. 
 
-These two terms are of similar order of magnitude in small parameters $c^{-2}$ and $\bm{k}$, but have different behavior with respect to the symmetries of the states, and different origins with respect to the ferroelectricity. The first term can be seen as a direct result of the electric field resulting from the ferroelecticity, i.e. $\nabla V$ there should be understood as the uniform internal electric field, whereas in the second term the $\nabla V$ should be understood as the potential which causes atomic spin-orbit coupling. This means that it is important that the orbitals $u_n and u_m$ in the second term originate from an atom with strong spin-orbit coupling. The reason why this term only leads to a non-zero contribution when inversion is broken can be understood by looking at the required symmetries of orbitals $u_n, u_m$, as was shown by [Blugel paper]. Since $\bm{p}$ is odd in spatial coordinates, $\bm{k} \cdot \bm{p}$ is only non-zero when one of the orbitals is odd with respect to a spatial direction and the other even. One example could be a $p_y$ orbital and a $s-pz$ hybdridized one, which would be created by the ferroelectricity with electric polarization along the $z$-axis. 
+These two terms are of similar order of magnitude in small parameters $c^{-2}$ and $\bm{k}$, but have different behavior with respect to the symmetries of the states, and different origins with respect to the ferroelectricity. The first term can be seen as a direct result of the electric field resulting from the ferroelecticity, i.e. $\nabla V$ there should be understood as the uniform internal electric field, whereas in the second term the $\nabla V$ should be understood as the potential which causes atomic spin-orbit coupling. This means that it is important that the orbitals $u_n$, and $u_m$ in the second term originate from an atom with strong spin-orbit coupling. The reason why this term only leads to a non-zero contribution when inversion is broken can be understood by looking at the required symmetries of orbitals $u_n, u_m$, as was shown by [Blugel paper]. Since $\bm{p}$ is odd in spatial coordinates, $\bm{k} \cdot \bm{p}$ is only non-zero when one of the orbitals is odd with respect to a spatial direction and the other even. One example could be a $p_y$ orbital and a $s-pz$ hybdridized one, which would be created by the ferroelectricity with electric polarization along the $z$-axis (add drawing? add hopping matrix?).
+
+With regards to the size of the effect, the first term usually results in a tiny splitting, due to the tiny prefactor ($~10^-6$) and small $\bm{k}$ value. The second term can be larger, because atomic SOC can be large for heavier atoms. There is, however, another possible source of spin splitting. To understand this contribution, we first need to understand the behavior of the orbital angular momentum of the Bloch functions in reciprocal space. This has been first described by Park et al \cite{Park2011}, and we will give a short derivation here.
+
+The crux is that Bloch functions with periodic part $u_n(\bm{k},\bm{r})$ that have non-zero orbital angular momentum (OAM) create inter unit cell dipoles, which couple to the uniform electric field caused by the polarization. This will thus lead to the creation of orbitals with OAM away from high symmetry points, if symmetries allow for it and ferroelectricity is present. This effect is purely electrostatic and thus doesn't come with small prefectors like the first term in \ref{qe:kp_expansion}.  c
 
 
 
