added some more rashba related things

--- a/papers/Rashba/Rashba.tex
+++ b/papers/Rashba/Rashba.tex
@@ -43,12 +43,16 @@ where the sum over $m, \sigma_2$ includes all states which are not equal to $n, 
 
 These two terms are of similar order of magnitude in small parameters $c^{-2}$ and $\bm{k}$, but have different behavior with respect to the symmetries of the states, and different origins with respect to the ferroelectricity. The first term can be seen as a direct result of the electric field resulting from the ferroelecticity, i.e. $\nabla V$ there should be understood as the uniform internal electric field, whereas in the second term the $\nabla V$ should be understood as the potential which causes atomic spin-orbit coupling. This means that it is important that the orbitals $u_n$, and $u_m$ in the second term originate from an atom with strong spin-orbit coupling. The reason why this term only leads to a non-zero contribution when inversion is broken can be understood by looking at the required symmetries of orbitals $u_n, u_m$, as was shown by [Blugel paper]. Since $\bm{p}$ is odd in spatial coordinates, $\bm{k} \cdot \bm{p}$ is only non-zero when one of the orbitals is odd with respect to a spatial direction and the other even. One example could be a $p_y$ orbital and a $s-pz$ hybdridized one, which would be created by the ferroelectricity with electric polarization along the $z$-axis (add drawing? add hopping matrix?).
 
-With regards to the size of the effect, the first term usually results in a tiny splitting, due to the tiny prefactor ($~10^-6$) and small $\bm{k}$ value. The second term can be larger, because atomic SOC can be large for heavier atoms. There is, however, another possible source of spin splitting. To understand this contribution, we first need to understand the behavior of the orbital angular momentum of the Bloch functions in reciprocal space. This has been first described by Park et al \cite{Park2011}, and we will give a short derivation here.
+With regards to the size of the effect, the first term usually results in a tiny splitting, due to the tiny prefactor ($~10^-6$) and small $\bm{k}$ value. The second term can be larger, because atomic SOC can be large for heavier atoms. There is, however, another possible source of spin splitting, originating from the so-called orbital Rashba effect (ORE).
 
-The crux is that Bloch functions with periodic part $u_n(\bm{k},\bm{r})$ that have non-zero orbital angular momentum (OAM) create inter unit cell dipoles, which couple to the uniform electric field caused by the polarization. This will thus lead to the creation of orbitals with OAM away from high symmetry points, if symmetries allow for it and ferroelectricity is present. This effect is purely electrostatic and thus doesn't come with small prefectors like the first term in \ref{qe:kp_expansion}.  c
+\section{Orbital Rashba Effect}
+Contrary to the relativistic effect, this one originates from electrostatic considerations. Namely, it can be shown that Bloch functions with nonzero orbital angular momentum have nonzero dipoles. This leads to two seperate effects, firstly, when spin orbit coupling is included, OAM is unquenched at the high symmetry k-points, and as will be shown below, this leads to a correction to the band dispersion that varies linearly with $\bm{k}$. Secondly, this causes a linear variation of the OAM of the Bloch functions as one moves away from the high-symmetry point. If one then includes $\bm{l}\cdot\bm{\sigma}$ this linear $l$ will lead to an energy contribution with either positive or negative slope.
+To understand this contribution, we first need to understand the behavior of the orbital angular momentum of the Bloch functions in reciprocal space. This has been first described by Park et al \cite{Park2011}, and we will give a short derivation here.
 
+The crux is that Bloch functions with periodic part $u_n(\bm{k},\bm{r})$ that have non-zero orbital angular momentum (OAM) create inter unit cell dipoles, which couple to the uniform electric field caused by the polarization. This will thus lead to the creation of orbitals with OAM away from high symmetry points, if symmetries allow for it and ferroelectricity is present. This effect is purely electrostatic and thus doesn't come with small prefectors like the first term in \ref{qe:kp_expansion}.
 
-
+\subsection{Tight-Binding model}
+Due to the breaking of inversion symmetry there are extra allowed hopping terms between unit cells, on top of the usual ones from overlap integrals. These terms originate from the energy $H_{isb} = e \bm{r}\cdot \bm{E}$, i.e. electric dipole moments coupling to the electric field. In the following we study a toy 2D square layer with one atom per unit cell and $s$, $p$ orbitals, where the field is chosen perpendicular to the 2D layer along the $\bm{z}$ direction. We take the One obvious result of this term is that there will be a hybridization between the $s$ and $p_z$ orbitals, more importantly for the Orbital Rashba effect, we look at the inter-cell dipole moments between $p_{x,y}$ and $p_z$ orbitals.   
 
 
 This work aims to clarify the effect in bulk systems, the interplay between ferroelectricity, orbital character and atomic SOC that causes it, and in doing so identifies the criteria for finding other materials with large Rashba splitting.
