--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -5,7 +5,7 @@
 \usepackage{cancel}
 \usepackage{siunitx}
 \usepackage{graphicx}
-\usepackage{smartdiagram}
+% \usepackage{smartdiagram}
 \usepackage[caption=false]{subfig}
 \captionsetup[subfigure]{labelformat=brace}
 \usepackage{tikz}
