almost finished the linear generation of OAM

--- a/papers/Rashba/Rashba.tex
+++ b/papers/Rashba/Rashba.tex
@@ -41,9 +41,9 @@ Without loss of generality we can take $\bm{k}_0 = 0$ and $E_0 = 0$.
 
 where the sum over $m, \sigma_2$ includes all states which are not equal to $n, \sigma_1$. 
 
-These two terms are of similar order of magnitude in small parameters $c^{-2}$ and $\bm{k}$, but have different behavior with respect to the symmetries of the states, and different origins with respect to the ferroelectricity. The first term can be seen as a direct result of the electric field resulting from the ferroelecticity, i.e. $\nabla V$ there should be understood as the uniform internal electric field, whereas in the second term the $\nabla V$ should be understood as the potential which causes atomic spin-orbit coupling. This means that it is important that the orbitals $u_n$, and $u_m$ in the second term originate from an atom with strong spin-orbit coupling. The reason why this term only leads to a non-zero contribution when inversion is broken can be understood by looking at the required symmetries of orbitals $u_n, u_m$, as was shown by [Blugel paper]. Since $\bm{p}$ is odd in spatial coordinates, $\bm{k} \cdot \bm{p}$ is only non-zero when one of the orbitals is odd with respect to a spatial direction and the other even. One example could be a $p_y$ orbital and a $s-pz$ hybdridized one, which would be created by the ferroelectricity with electric polarization along the $z$-axis (add drawing? add hopping matrix?).
+These two terms are of similar order of magnitude in small parameters $c^{-2}$ and $\bm{k}$, but have different behavior with respect to the symmetries of the states, and different origins with respect to the ferroelectricity. The first term can be seen as a direct result of the electric field resulting from the ferroelecticity, i.e. $\nabla V$ there should be understood as the uniform internal electric field, whereas in the second term the $\nabla V$ should be understood as the potential which causes atomic spin-orbit coupling. This means that it is important that the orbitals $u_n$, and $u_m$ in the second term originate from an atom with strong spin-orbit coupling. The reason why this term only leads to a non-zero contribution when inversion is broken can be understood by looking at the required symmetries of orbitals $u_n, u_m$, as was shown by [Blugel paper]. Since $\bm{p}$ is odd in spatial coordinates, $\bm{k} \cdot \bm{p}$ is only non-zero when one of the orbitals is odd with respect to a spatial direction and the other even. One example could be a $p_y$ orbital and a $s$-$pz$ hybdridized one, which would be created by the ferroelectricity with electric polarization along the $z$-axis (add drawing? add hopping matrix?).
 
-With regards to the size of the effect, the first term usually results in a tiny splitting, due to the tiny prefactor ($~10^-6$) and small $\bm{k}$ value. The second term can be larger, because atomic SOC can be large for heavier atoms. There is, however, another possible source of spin splitting, originating from the so-called orbital Rashba effect (ORE).
+With regards to the size of the effect, the first term usually results in a tiny splitting, due to the tiny prefactor ($~10^{-6}$) and small $\bm{k}$ value. The second term can be larger, because atomic SOC can be large for heavier atoms. There is, however, another possible source of spin splitting, originating from the so-called orbital Rashba effect (ORE).
 
 \section{Orbital Rashba Effect}
 Contrary to the relativistic effect, this one originates from electrostatic considerations. Namely, it can be shown that Bloch functions with nonzero orbital angular momentum have nonzero dipoles. This leads to two seperate effects, firstly, when spin orbit coupling is included, OAM is unquenched at the high symmetry k-points, and as will be shown below, this leads to a correction to the band dispersion that varies linearly with $\bm{k}$. Secondly, this causes a linear variation of the OAM of the Bloch functions as one moves away from the high-symmetry point. If one then includes $\bm{l}\cdot\bm{\sigma}$ this linear $l$ will lead to an energy contribution with either positive or negative slope.
@@ -52,8 +52,27 @@ To understand this contribution, we first need to understand the behavior of the
 The crux is that Bloch functions with periodic part $u_n(\bm{k},\bm{r})$ that have non-zero orbital angular momentum (OAM) create inter unit cell dipoles, which couple to the uniform electric field caused by the polarization. This will thus lead to the creation of orbitals with OAM away from high symmetry points, if symmetries allow for it and ferroelectricity is present. This effect is purely electrostatic and thus doesn't come with small prefectors like the first term in \ref{qe:kp_expansion}.
 
 \subsection{Tight-Binding model}
-Due to the breaking of inversion symmetry there are extra allowed hopping terms between unit cells, on top of the usual ones from overlap integrals. These terms originate from the energy $H_{isb} = e \bm{r}\cdot \bm{E}$, i.e. electric dipole moments coupling to the electric field. In the following we study a toy 2D square layer with one atom per unit cell and $s$, $p$ orbitals, where the field is chosen perpendicular to the 2D layer along the $\bm{z}$ direction. We take the One obvious result of this term is that there will be a hybridization between the $s$ and $p_z$ orbitals, more importantly for the Orbital Rashba effect, we look at the inter-cell dipole moments between $p_{x,y}$ and $p_z$ orbitals.   
-
+Due to the breaking of inversion symmetry there are extra allowed hopping terms between unit cells, on top of the usual ones from overlap integrals. These terms originate from the energy $H_{isb} = e (\bm{d}\cdot \bm{E})$, i.e. electric dipole moments coupling to the electric field. In the following we study a toy 2D square layer with one atom per unit cell and $s$, $p$ orbitals, where the field is chosen perpendicular to the 2D layer along the $z$ direction. Assuming Wannier functions $p_\alpha(\bm{r},\bm{R}) = \alpha e^{-|\bm{r}-\bm{R}|^2}$, we can write down the dipole matrix terms between the central unit cell and one shifted by $\bm{R}=\bm{n}a, \bm{n}=(n_x,n_y)$ as follows:
+\begin{equation}
+	d_z(\bm{n}) = ae^{-\frac{a^2|\bm{n}|^2}{2}}\frac{\pi^{\frac{3}{2}}}{16\sqrt{2}}\left(\begin{matrix}0&0&0&2\\\\0&0&0&n_x\\\\0&0&0&n_y\\\\2&n_x&n_y&0\end{matrix}\right),
+	% d_z(\bm{R}) = ae^{-\frac{|\bm{R}|^2}{2}}\frac{\pi^{\frac{3}{2}}}{16\sqrt{2}}(2,n_x,n_y,0),
+\end{equation}
+where the indices run through $s$, $p_{x,y,z}$. Using these Wannier functions we can write down the dipoles of Bloch functions as,
+\begin{align}
+	d_z(\bm{k}) &= \sum_{\bm{n}} e^{i \bm{k}\cdot \bm{n}}d_z(\bm{n})\\
+	&=\sum_{\bm{n}}i \sin(\bm{k}\cdot\bm{n}) d_z(\bm{n})
+\end{align}
+writing $\bm{k}$ in terms of crystalline coordinates, and we kept only the $\sin(\bm{k}\cdot\bm{n})$ part of the exponent since the $\cos(\bm{k}\cdot\bm{n})$ part is $0$ due to the fact that it is even in the sum over $\bm{n} = \{-\infty, \infty\}$, whereas $d_z(\bm{n})$ is odd. If we then assume that at $k=0$ the Bloch functions are formed purely from these $s$,$p_{x,y,z}$ Wannier functions: $\Ket{\alpha(\bm{k}=\bm{0})} = \sum_{\bm{n}} \Ket{\alpha(\bm{n})}$, we can write down a perturbation theory for small $\bm{k}$ in the spirit of the usual $\bm{k}\cdot\bm{p}$ theory,
+\begin{align}
+	\Ket{\alpha(\bm{k})}&=\Ket{\alpha} + \sum_{\beta} \frac{\Bra{\alpha} H_0(\bm{k}) + H_{isb}(\bm{k}) \Ket{\beta}}{E_{\beta} - E_{\alpha}} \Ket{\beta}\\
+	&=\Ket{\alpha} + \sum_{\beta} \frac{\Bra{\alpha} H_0(\bm{k}) + e E_z d_z(\bm{k}) \Ket{\beta}}{E_{\beta} - E_{\alpha}} \Ket{\beta}.
+\end{align}
+The effect of $H_{isb}$ is to mix $p_{x,y}$ and $p_z$ orbitals, e.g. if $\Ket{\alpha} = p_x$ we get that
+\begin{align}
+	\Ket{\alpha(\bm{k})} &= \Ket{p_x} + i \frac{e E_z \sum_{\bm{n}} \sin(k_x n_x)}{E_{p_z} - E_{p_x}} \Ket{p_z}\\
+	&=\Ket{p_x} + i c(\bm{k}) \Ket{p_z}.
+\end{align}
+This shows that the inversion symmetry breaking term will lead to a linear variation of the orbital angular momentum. 
 
 This work aims to clarify the effect in bulk systems, the interplay between ferroelectricity, orbital character and atomic SOC that causes it, and in doing so identifies the criteria for finding other materials with large Rashba splitting.
 We start with a brief overview of the important properties of GeTe, followed by a qualitative description of the coupling between the orbital angular momentum (OAM) and the electric polarization. Then we verify the model by performing ab initio calculations on germanium telluride (GeTe), a typical example of the aforementioned effects.
